***********
version 2.2
***********

* fixed bugs in named type support - when an unknown named type is accessed
  the first time, ocilib keeps an invalid entry for the named type in the type
  list; the second time the type is accessed, a crash results
* fixed memory bugs in handling named type bind parameters created by hand
  where the value type is incorrect

***********
version 2.1
***********

* added support for the selectRow() method when compiled with Qore 0.8.2+
* fixed retrieving a collection of objects; previously would return the first
  object in every position of the list returned
* fixed memory and handle leaks in exception handling related to named type
  support
* fixed retrieving NUMBER values from a named type that require >32 bits to
  represent as an integer


***********
version 2.0
***********

* support for Qore's prepared statement API with Qore 0.8.1+
* object and collection support courtesy of ocilib
  (http://orclib.sourceforge.net/), note that ocilib was highly modified to be
  usable in this module, mostly due to the fact that we use a separate
  environment data structure for each connection to ensure maximum thread
  scalability - the Oracle docs say that all operations on an environment
  handle or any handle derived from an environment handle (i.e. statement
  handles, etc) must be either wrapped in a mutex (when initialized with
  OCI_NO_MUTEX) or will be wrapped in a mutex by oracle (with OCI_THREADED and
  without OCI_NO_MUTEX).
  collections of collections of object, etc are supported
* support for binding and retrieving ROWID column values
* fixed retrieving NUMBER values with over 30 digits


***********
version 1.3
***********

fixed a bug setting and reading time zone information from TIMESTAMP WITH TIME
ZONE and TIMESTAMP WITH LOCAL TIME ZONE columns
fixed a bug reading and setting fractional seconds


***********
version 1.2
***********

when compiled against qore >= 0.8.0, the driver supports: